--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,7 +28,7 @@
         <link rel="stylesheet" href="{{ asset('css/vendors.css') }}" />
         <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
         <link rel="stylesheet" href="{{ asset('css/components.css') }}" />
-        <link rel="stylesheet" href="{{ asset('css/stdi_style.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/stdi_style.css?v1') }}">
         {% if template == "studit" %}
             <link rel="stylesheet" href="{{ asset('css/studit.css') }}">
         {% endif %}
