--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -859,6 +859,7 @@
                             },
                             success: function (data) {
                                 urlMp3 = data['newLien'];
+                                console.log(urlMp3)
                                 $('.btnAddNewMp3ToPodcast').show();
                             },
                             error: function () {
@@ -1021,6 +1022,7 @@
                     if (nomMp3 === "") {
                         $('[data-contentModal=ajoutMp3ToPodcast] [data-champName=nomMp3]').addClass('alertMustBeSet');
                     } else {
+                        console.log('addMp3_ajax '+urlMp3)
                         $.ajax({
                             type: 'POST',
                             url: "{{ path('addMp3_ajax') }}",
